# Y86-64-CPU-Simulator

./: README.md
SEQ/: Go.cpp  _Memory.cpp  cpu.h  decode.cpp  execute.cpp  fetch.cpp  instruction_def.h  kzzcpu  main.cpp  makefile  memory.cpp  pc_update.cpp  print.cpp  read.cpp  read.h  writeback.cpp
cpu/: CMakeLists.txt  Go.cpp  _Memory.cpp  conditioncode.cpp  cpu.h  decode.cpp  execute.cpp  fetch.cpp  instruction_def.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memory.cpp  pc_update.cpp  read.cpp  read.h  writeback.cpp
